# velosiraptor

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  rust-toolchain
lib/libvrc/: Cargo.toml  README.md
lib/libvrc/src/: lib.rs
lib/libvrc/src/ast/: actions.rs  ast.rs  bitslice.rs  consts.rs  expression.rs  field.rs  flags.rs  import.rs  interface.rs  issues.rs  map.rs  method.rs  mod.rs  param.rs  root.rs  state.rs  statement.rs  symboltable.rs  transform.rs  types.rs  unit.rs  utils.rs
lib/libvrc/src/ast/map/: explicit.rs  list.rs  mod.rs
lib/libvrc/src/ast/unit/: mod.rs  segment.rs  staticmap.rs
lib/libvrc/src/codegen/: mod.rs  rust.rs
lib/libvrc/src/codegen/c/: field.rs  interface.rs  mod.rs  segment.rs  staticmap.rs  unit.rs  utils.rs
lib/libvrc/src/codegen/rust/: field.rs  interface-back.rs  interface.rs  mod.rs  unit.rs  utils.rs
lib/libvrc/src/error/: mod.rs
lib/libvrc/src/hwgen/: mod.rs
lib/libvrc/src/hwgen/fastmodels/: fields.rs  interface.rs  mod.rs  registers.rs  state.rs  unit.rs
lib/libvrc/src/lexer/: comments.rs  identifier.rs  mod.rs  number.rs  sourcepos.rs  token.rs
lib/libvrc/src/parser/: ast.rs  bitslice.rs  constdef.rs  expression.rs  field.rs  flags.rs  import.rs  interface.rs  map.rs  method.rs  mod.rs  param.rs  state.rs  statement.rs  terminals.rs  unit.rs
lib/libvrc/src/sourcepos/: mod.rs
lib/libvrc/src/synth/: mod.rs  operation.rs
lib/libvrc/src/synth/rosette/: consts.rs  context.rs  expr.rs  fields.rs  grammar.rs  interface.rs  methods.rs  mod.rs  model.rs  resultparser.rs  state.rs  synth.rs
lib/libvrc/src/synth/z3/: consts.rs  expr.rs  field.rs  flags.rs  instance.rs  interface.rs  method.rs  mod.rs  model.rs  operations.rs  query.rs  resultparser.rs  state.rs  task.rs  types.rs  worker.rs
lib/libvrc/src/token/: mod.rs  token.rs  tokens.rs  tokenstream.rs
lib/libvrc/tests/imports/: basicimport.vrs  circular21.vrs  circular22.vrs  diamond1.vrs  doubleimport.vrs  import1.vrs  import2.vrs  import3.vrs  recursivedouble.vrs
lib/libvrc/tests/lexer/: comments.vrs  commentsfail.vrs  sample.vrs  tokenfail.vrs  whitespace.vrs
lib/libvrc/tests/parser/: constdouble.vrs  constdouble2.vrs  consts.vrs  consts2.vrs  consts3.vrs  constsexpr.vrs  memorystate.vrs
lib/srcspan/: Cargo.toml  README.md
lib/srcspan/src/: lib.rs  loc.rs
lib/tokstream/: Cargo.toml  README.md
lib/tokstream/src/: lib.rs  token.rs
lib/velosiast/: Cargo.toml
lib/velosiast/src/: bin.rs  error.rs  lib.rs  symboltable.rs  utils.rs
lib/velosiast/src/ast/: constdef.rs  expr.rs  field.rs  fieldslice.rs  flags.rs  identifier.rs  interface.rs  map.rs  method.rs  mod.rs  operations.rs  param.rs  slice.rs  state.rs  types.rs  unit.rs
lib/velosiast/src/ast/expr/: binop.rs  fncall.rs  ifelse.rs  literals.rs  mod.rs  quantifier.rs  range.rs  slice.rs  unop.rs
lib/velosiast/src/ast/interface/: actions.rs  mod.rs
lib/velosiast/src/ast/map/: element.rs  explicit.rs  listcomp.rs  mod.rs
lib/velosiast/src/ast/state/: mod.rs
lib/velosiast/src/ast/unit/: enums.rs  mod.rs  osspec.rs  segment.rs  staticmap.rs
lib/velosiast/tests/: consts.rs  expr.rs  interface.rs  methods.rs  osspec.rs  segments.rs  state.rs
lib/velosiast/tests/utils/: mod.rs
lib/velosiast/tests/vrs/consts/: const_00_defs.vrs  const_00_defs_expected.txt  const_01_imported.vrs  const_01_imported_expected.txt  const_02_warning.vrs  const_02_warning_expected.txt  const_03_errors.vrs  const_03_errors_expected.txt  const_04_import_doubledef.vrs  const_04_import_doubledef_expected.txt
lib/velosiast/tests/vrs/expr/: expr_err_00_types.vrs  expr_err_00_types_expected.txt  expr_err_01_quantifier.vrs  expr_ok_00_simple.vrs  expr_ok_00_simple_expected.txt  expr_warn_00_const_if.vrs  expr_warn_00_const_if_expected.txt
lib/velosiast/tests/vrs/interface/: interface_err_00_double_parameter.vrs  interface_err_00_double_parameter_expected.txt  (+8 more)
lib/velosicodegen/: .gitignore  Cargo.toml
lib/velosicodegen/src/: bin.rs  lib.rs
lib/velosicodegen/src/c/: enums.rs  field.rs  interface.rs  mod.rs  osspec.rs  segment.rs  staticmap.rs  utils.rs
lib/velosicodegen/src/rust/: enums.rs  field.rs  interface.rs  mod.rs  segment.rs  staticmap.rs  unit.rs  utils.rs
lib/velosilexer/: Cargo.toml  README.md
lib/velosilexer/src/: bin.rs  error.rs  lib.rs  tokens.rs
lib/velosilexer/src/lexer/: comments.rs  identifier.rs  mod.rs  number.rs
lib/velosilexer/tests/: tests.rs
lib/velosiparser/: Cargo.toml  README.md  test.smt
lib/velosiparser/src/: bin.rs  error.rs  lib.rs  utils.rs
lib/velosiparser/src/parser/: constdef.rs  expr.rs  flags.rs  import.rs  interface.rs  map.rs  method.rs  mod.rs  param.rs  parameter.rs  state.rs  terminals.rs  unit.rs
lib/velosiparser/src/parsetree/: constparams.rs  consts.rs  expr.rs  field.rs  identifier.rs  interface.rs  map.rs  mod.rs  params.rs  state.rs  types.rs  unit.rs
lib/velosiparser/tests/: consts.rs  flags.rs  imports.rs  interface.rs  methods.rs
lib/velosiparser/tests/imports/: basicimport.vrs  circular1.vrs  circular23.vrs  diamond3.vrs  import1.vrs  import3.vrs  memorystate.vrs  multiimport.vrs  recursiveimport.vrs
lib/velosiparser/tests/utils/: mod.rs
lib/velosisynth/: Cargo.toml  README.md
lib/velosisynth/src/: bin.rs  error.rs  lib.rs  opts.rs
lib/velosisynth/src/model/: consts.rs  expr.rs  field.rs  flags.rs  interface.rs  method.rs  mod.rs  model.rs  state.rs  types.rs  utils.rs  velosimodel.rs  wbuffer.rs
lib/velosisynth/src/programs/: builder.rs  mod.rs  statevars.rs  symvars.rs
lib/velosisynth/src/sanitycheck/: exprs.rs  methods.rs  mod.rs  unit.rs
lib/velosisynth/src/vmops/: cnf.rs  enums.rs  foo.rs  map.rs  map_new.rs  mod.rs  precond.rs  protect.rs  queryhelper.rs  resultparser.rs  sanity.rs  semantics.rs  semprecond.rs  unmap.rs  utils.rs
lib/velosisynth/src/z3/: instance.rs  instance_library.rs  instance_standalone.rs  mod.rs  query.rs  taskq.rs  worker.rs  worker_nothreads.rs  worker_two_instances.rs
lib/velosisynth/synth/: z3-worker-1-log.smt2
lib/velosisynth/tests/: empty_conditions.vrs  precond_conflict.vrs
(+428 files in other folders)
