[package]
name = "vrc"
description = "The Velosiraptor Compiler"
license = "MIT"
version = "0.1.0"
authors = ["Reto Achermann <achreto@cs.ubc.ca>"]
edition = "2018"
readme = "README.md"

[workspace]

members = [
    "lib/codegen"
    ,"lib/crustal"
    ,"lib/libvrc"
    ,"lib/rosettelang"
    ,"lib/smtlib2"
    ,"lib/srcspan"
    ,"lib/tokstream"
    ,"lib/velosilexer"
    ,"lib/velosiparser"
    ,"lib/velosiast"
    ,"lib/velosisynth"
    ,"lib/velosicodegen"
    ,"lib/z3/z3-sys"
]

[dependencies]
# the argument parser
clap = "4.0.24"
# for colorful output
colored = "2"

# support library
libvrc = { path = "lib/libvrc" }

# logging and errors
log = { version = "0.4.17", features = ["max_level_trace", "release_max_level_warn"] }
simplelog = "^0.12.0"


