[package]
name = "vrc"
description = "The Velosiraptor Compiler"
license = "MIT"
version = "0.1.0"
authors = ["Reto Achermann <achreto@cs.ubc.ca>"]
edition = "2021"
readme = "README.md"

[workspace]

members = [
    "lib/codegen"
    ,"lib/crustal"
    ,"lib/rosettelang"
    ,"lib/smtlib2"
    ,"lib/srcspan"
    ,"lib/tokstream"
    ,"lib/velosiraptor-parser"
    ,"lib/velosiraptor-parser/lib/velosilexer"
    ,"lib/velosiast"
    ,"lib/velosisynth"
    ,"lib/velosicodegen"
    ,"lib/velosihwgen/"
    ,"lib/velosicomposition"
    ,"lib/z3/z3-sys"
]

[dependencies]
# argument parsing
clap = { version = "4.3.5", features = [ "derive" ] }

# for colorful output
colored = "2"

# support library
velosiast = { path = "lib/velosiast" }
velosisynth = { path = "lib/velosisynth" }
velosicodegen = { path = "lib/velosicodegen" }
velosihwgen = { path = "lib/velosihwgen" }

# logging and errors
log = { version = "0.4.19", features = ["max_level_trace", "release_max_level_warn"] }
simplelog = { version = "^0.12.0", features = ["paris"] }

# dependencies for testing
[dev-dependencies]
strip-ansi-escapes = "0.1.1"
rexpect = "0.5"
velosiparser = { path = "lib/velosiraptor-parser" }
velosicomposition = {path = "lib/velosicomposition" }

# enable optimizations for the tests
[profile.test]
opt-level = 3


# benchmarking

[[bench]]
name = "synth"
harness = false

[[bench]]
name = "opt"
harness = false

[[bench]]
name = "runtime"
harness = false