[package]
name = "tokstream"
description = "Library for expressing TokenStreams of parsed source files."
license = "MIT"
version = "0.1.0"
authors = ["Reto Achermann <achreto@cs.ubc.ca>"]
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
srcspan= { path = "../srcspan" }



