[package]
name = "velosilexer"
description = "Lexer library for the Velosiraptor Language"
license = "MIT"
version = "0.1.0"
authors = ["Reto Achermann <achreto@cs.ubc.ca>"]
edition = "2018"
readme = "README.md"

[dependencies]
nom = "7.1.3"
tokstream = { git = 'https://github.com/achreto/rust-tokstream' }
colored = "2.0.0"
custom_error = "1.9.2"

# dependencies for testing
[dev-dependencies]
strip-ansi-escapes = "0.1.1"

[lib]
name = "velosilexer"
path = "src/lib.rs"

[[bin]]
name = "velosilexer"
path = "src/bin.rs"