[package]
name = "velosiparser"
description = "Library for parsing the Velosiraptor Language"
license = "MIT"
version = "0.1.0"
authors = ["Reto Achermann <achreto@cs.ubc.ca>"]
edition = "2018"
readme = "README.md"


# crate dependencies
[dependencies]
nom = "7.1.3"
velosilexer = { path = "../velosilexer" }
colored = "2.0.0"
custom_error = "1.9.2"

# dependencies for testing
[dev-dependencies]
strip-ansi-escapes = "0.1.1"


[lib]
name = "velosiparser"
path = "src/lib.rs"

[[bin]]
name = "velosiparser"
path = "src/bin.rs"