[package]
name = "velosisynth"
description = "Synthesis Library for the Velosiraptor"
license = "MIT"
version = "0.1.0"
authors = ["Reto Achermann <achreto@cs.ubc.ca>"]
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
velosiast = { path = "../velosiast" }
colored = "2.0.0"
custom_error = "1.9.2"
smt2 = { path = "../smtlib2", features = ["z3"] }
log = { version = "0.4.19", features = ["max_level_trace", "release_max_level_warn"] }
simplelog = { version = "^0.12.0", features = ["paris"] }
clap = { version = "4.3.5", features = [ "cargo" ] }
z3-sys = { path = "../z3/z3-sys", features = ["static-link-z3"], optional = true }
petgraph = "0.6.3"
itertools = "0.11.0"
crossbeam = "0.8.4"

[features]
default = ["z3-standalone"]
# Enable standalone Z3 instead of using the library
z3-standalone = []
# Enable the use of the z3-library
z3-library = ["dep:z3-sys"]
# restart z3 instead of simply resetting
z3-restart = []

[lib]
name = "velosisynth"
path = "src/lib.rs"

[[bin]]
name = "velosisynth"
path = "src/bin.rs"
